@@ -55,3 +55,12 @@ div.gallery-spacer
 {
   clear: both;
 }
+a
+{
+  text-decoration: none;
+}
+a:hover
+{
+  text-decoration: underline;
+  color: #FF0000;
+}
